k8s/manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: production
    name: gameforge
  name: gameforge
