k8s/manifests/07-gameforge-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gameforge
  name: gameforge-app
  namespace: gameforge
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: metrics
    port: 9090
    targetPort: 9090
  selector:
    app: gameforge
    component: app
  type: ClusterIP
